KULRICE-3866, bug fix, add comments